# Swiss-Ephemeris-Engine

./: .dockerignore  .env.development  .env.example  .env.local  .env.production  .gitignore  API_DOCUMENTATION.md  ASCENDANT_EXPLANATION.md  CHANGELOG.md  CHART_POSITIONING_FIXES.md  ChartVisualization_Fixed.jsx  DEPLOY.md  DEPLOYMENT.md  DebugChart.jsx  Dockerfile  ENVIRONMENT_CONFIG.md  FINAL_VERIFICATION_SUMMARY.md  NorthIndianChartCalculator.js  NorthIndianChart_Enhanced.jsx  OPTIMIZATION_SUMMARY.md  QUICK_REFERENCE.md  README.md  REFINEMENTS_SUMMARY.md  Railway-logs.md  TIMEZONE_FIX.md  TestChart.jsx  TestChartComponent.jsx  TestNavamsaChart.jsx  TestNewChart.jsx  TestRahulJanaChart.jsx  USER_GUIDE.md  VERIFICATION_README.md  VERIFICATION_SUCCESS_REPORT.md  ascendant_analysis.js  astrova_memory.py  backend_mirror_verification.js  chart_positioning_analysis.js  chart_test_results.json  debug_ascendant.py  debug_calculation_precision.js  (+40 more)
.github/workflows/: ci.yml  release-docker.yml
backend/: .env  .env.example  EPHEMERIS_SETUP.md  README.md  TECHNICAL_ACCURACY.md  create-ml-tables.js  debugMoonVerifier.js  debug_astrological_accuracy.js  debug_patterns.js  debug_swiss_ephemeris.js  download-ephemeris.sh  enhanced_astrological_model.pkl  enhanced_astrological_scaler.pkl  ml_predict.py  ml_train.py  ml_train_enhanced.py  ml_train_simple.py  nixpacks.toml  package-lock.json  package.json  seedFromCSV.js  server-minimal.js  server.js  setup-ml-database.js  setup.sh  test_batch3_all_charts.js  test_longitude_debug.js  test_patterns.js
backend/components/: AccuracyTooltip.jsx  TechnicalAccuracyFAQ.jsx
backend/config/: database.js  openai.js  supabase.js
backend/controllers/: kundliController.js  planetaryPositionsController.js
backend/database/: create_pattern_matches_table.sql
backend/docs/: technical-accuracy-faq.md
backend/ephemeris/: README.txt
backend/routes/: ai.js  analytics.js  dasha.js  historicalEnrichment.js  kundli.js  majorPatterns.js  ml.js  panchang.js  patternRecall.js  patterns.js  payments.js  planetaryEvents.js  planetaryPositions.js  subscription.js  transits.js
docs/: AUTHENTICATION_SETUP.md  CLEANUP_SUMMARY.md  CSV_SEEDING_GUIDE.md  LOCATION_ENRICHMENT_README.md  MEMORY_USAGE_GUIDE.md  MONTHLY_PREDICTION_IMPLEMENTATION.md  Patterns Feeding and ML Training Guide.md  README.md  WIKIPEDIA_ENRICHMENT_SYSTEM.md
examples/: derive_features.py
public/: 404.html  _redirects  manifest.json
scripts/: debug_chart_verification.js  postbuild.js
src/: Routes.jsx
swiss_calc_engine/: __init__.py  cli.py  engine.py  service.py
swiss_calc_engine.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_service.py
(+181 files in other folders)
